# DR4R-SLAM-Example

BEOpt08/: bal_dataset.py  bundle_adjustment.py  utils.py  visualize.py
BEOpt08/data/: bal_data_ba.ply  bal_data_ori.ply
BEOpt09/: pgopt.py
BEOpt09/data/: sphere_10.pt
BEOpt09/pgo_data/: dataset.py  pose_graph.py
DenseReconstruction11/: rgbRecon.py
DenseReconstruction11/data/: pose.txt
VO06/: PnP.py  PnPRGBD.py
VO07/: direct.py
VO07/LKOF/: LKFunc.py  OpticalFlow.py
VOpartA06/: EpipolarGeometry.py  FeatureExtraction.py  ICPRGBD.py  PnPRGBD.py  Triangulation.py  TriangulationRGB.py
optimization05/ceresopt/: CMakeLists.txt  main.cpp
optimization05/gnopt/: CMakeLists.txt  main.cpp
pinhole04/stereoVision/: CMakeLists.txt  main.cpp
pinhole04/undistortion/: CMakeLists.txt  main.cpp
